# contabilidad_api

./: .env.example  .gitignore  main.py  pyproject.toml  render.yaml  requirements.txt
application/dto/: category_dto.py  expense_dto.py
application/use_cases/categories/: create_category.py  delete_category.py  update_category.py
application/use_cases/expenses/: create_expense.py  delete_expense.py  list_expenses.py  update_expense.py
config/: settings.py
domain/: exceptions.py
domain/entities/: category.py  expense.py  family.py
domain/repositories/: category_repository.py  expense_repository.py  family_repository.py
domain/value_objects/: money.py  recurrence.py
infrastructure/database/: supabase_client.py
infrastructure/database/migrations/: 001_initial_schema.sql
infrastructure/mappers/: expense_mapper.py
infrastructure/repositories/: supabase_category_repository.py  supabase_expense_repository.py  supabase_family_repository.py
presentation/: dependencies.py
presentation/api/middleware/: error_handler.py
presentation/api/routers/: categories_router.py  expenses_router.py
presentation/api/schemas/: category_schemas.py  expense_schemas.py
supabase/: config.toml
supabase/migrations/: 20260307000002_user_trigger.sql
tests/unit/application/: test_create_expense.py
